--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "app-preview",
+  "version": "0.0.1",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -10,6 +11,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@1password/sdk": "^0.3.1",
     "nanoid": "^5.1.6",
     "zod": "^4.1.12"
   }
