--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@1password/sdk": "^0.3.1",
+    "nanocolors": "^0.2.13",
     "nanoid": "^5.1.6",
     "zod": "^4.1.12"
   }
