--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/commander": "^2.12.5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "@1password/sdk": "^0.3.1",
+    "@clack/prompts": "^0.11.0",
+    "commander": "^14.0.2",
     "nanocolors": "^0.2.13",
     "nanoid": "^5.1.6",
     "zod": "^4.1.12"
