--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/commander": "^2.12.5"
+    "@types/commander": "^2.12.5",
+    "prettier": "^3.6.2"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -14,9 +15,12 @@
   "dependencies": {
     "@1password/sdk": "^0.3.1",
     "@clack/prompts": "^0.11.0",
+    "@octokit/app": "^16.1.2",
     "commander": "^14.0.2",
+    "fastify": "^5.6.1",
     "nanocolors": "^0.2.13",
     "nanoid": "^5.1.6",
+    "open": "^10.2.0",
     "zod": "^4.1.12"
   }
 }
