--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@1password/sdk": "^0.3.1",
-    "@clack/prompts": "^0.11.0",
+    "@clack/prompts": "1.0.0-alpha.6",
     "@octokit/app": "^16.1.2",
     "commander": "^14.0.2",
     "fastify": "^5.6.1",
