--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -7,4 +7,6 @@ services:
         COPY ./main.ts ./
         CMD ["bun", "run", "main.ts"]
     expose:
-      - 80
+      - 3000
+    environment:
+      PORT: 3000
