--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@1password/sdk": "^0.3.1",
     "@clack/prompts": "1.0.0-alpha.6",
     "@octokit/app": "^16.1.2",
+    "@octokit/request": "^10.0.6",
+    "@octokit/webhooks": "^14.1.3",
     "commander": "^14.0.2",
     "fastify": "^5.6.1",
     "fastify-raw-body": "^5.0.0",
