--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -3,9 +3,9 @@ global:
   checkNewVersion: false
   sendAnonymousUsage: false
 
-api:
-  dashboard: true
-  insecure: true
+# api:
+#   dashboard: true
+#   insecure: true
 
 entryPoints:
   web:
