--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@1password/sdk": "^0.3.1",
     "@clack/prompts": "1.0.0-alpha.6",
     "@octokit/app": "^16.1.2",
+    "@octokit/auth-app": "^8.1.2",
     "@octokit/request": "^10.0.6",
     "@octokit/webhooks": "^14.1.3",
     "commander": "^14.0.2",
@@ -24,6 +25,7 @@
     "nanocolors": "^0.2.13",
     "nanoid": "^5.1.6",
     "open": "^10.2.0",
+    "simple-git": "^3.30.0",
     "zod": "^4.1.12"
   }
 }
