--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.app-preview-api.rule=Host(`${API_HOST}`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.app-preview-api.entrypoints=web"
-      # - "traefik.http.services.app-preview-api.loadbalancer.server.port=3000"
+      - "traefik.http.routers.app-preview-api.entrypoints=web,web-secure"
+      - "traefik.http.middlewares.app-preview-api_https.redirectscheme.scheme=https"
+      - "traefik.http.routers.app-preview-api.middlewares=app-preview-api_https"
 
 networks:
   app-preview-traefik_default:
