--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
   api:
     container_name: app-preview-api
-    image: oven/bun
+    build:
+      dockerfile_inline: |
+        FROM oven/bun
+        RUN apt-get update && apt-get install -y git
     volumes:
       - "${PWD}:/app-preview:Z"
     working_dir: /app-preview
