--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     build:
       dockerfile_inline: |
         FROM oven/bun
-        RUN apt-get update && apt-get install -y git docker.io
+        RUN apt-get update && apt-get install -y git curl
+        RUN curl -fsSL https://get.docker.com/ | sh
     volumes:
       - "${PWD}:/app-preview:Z"
       # docker socket
