--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "cli:build": "bun build --compile --outfile=./ap --target=bun ./src/cli/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/commander": "^2.12.5",
