--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@octokit/auth-app": "^8.1.2",
     "@octokit/request": "^10.0.6",
     "@octokit/webhooks": "^14.1.3",
+    "ansi-escapes": "^7.2.0",
     "commander": "^14.0.2",
     "fastify": "^5.6.1",
     "fastify-raw-body": "^5.0.0",
